# data-intelligence-agent

./: AGENTS.md  CLAUDE.md  OBJECTIVES.md  README.md  REMOVE-VENV.md  START.md  ideas.md  openrouter_test_page.py  plan.md  pyproject.toml  spec.md
.claude/: settings.json  settings.local.json
.claude/commands/: solve.md  sql-create.md  sql-test.md  sql-titles.md
data/: data.csv  sales_data_20.csv
logs/: .session_starts.json  conversation.json  session_20260325_072609_9295d57c.csv  session_20260326_071632_55aa5543.csv  session_20260326_071846_6a9a6ea3.csv  session_20260326_121837_81151c7c.csv  session_20260326_122907_79ceaf00.csv  session_20260327_083500_3a741caf.csv  session_20260327_083956_fb1674c4.csv  session_20260327_085739_55b01fe2.csv  session_20260327_085804_30f76ccf.csv  session_20260327_085834_7c99c839.csv  session_20260327_165538_d6979605.csv  session_20260327_170912_2af8c391.csv  session_20260327_174054_5fceca22.csv  session_20260329_081030_70247b47.csv
output/: RESPONSE_TO_OBJECTIVES.html  RESPONSE_TO_OBJECTIVES.md  dirty.csv  dirty_rows.md  report.md
output/insights/: biomarker_correlation_heatmap.md  biomarker_expression_summary.md  biomarker_mycn_vs_alk.md  category_city.md  category_customer_id.md  category_customer_name.md  category_order_id.md  category_payment_method.md  category_product_id.md  category_product_name.md  category_store_id.md  category_store_name.md  clinical_age_distribution.md  clinical_efs_by_risk.md  clinical_risk_distribution.md  (+25 more)
tests/: test_api_routes.py  test_chart_service.py  test_data_service.py  test_report_service.py
(+31 files in other folders)
