[project]
name = "biomedical-fastapi-app"
version = "0.1.0"
description = "FastAPI biomedical analytics app using Plotly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "jinja2>=3.1.5",
  "kaleido>=1.2.0",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomed_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
